# nvd-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.rst  SECURITY.md  app.py  memo.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.openapi-generator/: FILES
docs/: authors.rst  conf.py  index.rst  openapi.rst
doctrees/: authors.doctree  environment.pickle  index.doctree  license.doctree  sample.doctree
html/: .buildinfo  authors.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  sample.html  search.html  searchindex.js
puml/: class.puml
schemas/: cpe.match.oas.yml  cpe.oas.yml  cve.history.oas.yml  cve.oas.yml  nvd.oas.yml
src/: client.py
test/: test_cpe_match_oas.py  test_cpe_match_oas_match_strings_inner.py  test_cpe_match_oas_match_strings_inner_matches_inner.py  test_cpe_oas.py  test_cpe_oas_products_inner.py  test_cpe_oas_products_inner_cpe.py  test_cpe_oas_products_inner_cpe_deprecated_by_inner.py  test_cpe_oas_products_inner_cpe_refs_inner.py  test_cpe_oas_products_inner_cpe_titles_inner.py  test_cve_history_oas.py  test_cve_history_oas_cve_changes_inner.py  test_cve_history_oas_cve_changes_inner_change.py  test_cve_history_oas_cve_changes_inner_change_details_inner.py  test_cve_oas.py  test_cve_oas_vulnerabilities_inner.py  test_cve_oas_vulnerabilities_inner_cve.py  test_cve_oas_vulnerabilities_inner_cve_configurations_inner.py  test_cve_oas_vulnerabilities_inner_cve_configurations_inner_nodes_inner.py  test_cve_oas_vulnerabilities_inner_cve_configurations_inner_nodes_inner_cpe_match_inner.py  test_cve_oas_vulnerabilities_inner_cve_descriptions_inner.py  (+16 more)
(+212 files in other folders)
