[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
description = "NVD API 2.0 Python API"
documentation = "https://kannkyo.github.io/nvd-api/html/"
homepage = "https://github.com/kannkyo/nvd-api"
include = ["sbom.xml"]
keywords = ["NVD", "security", "vulnerability"]
name = "nvd-api"
readme = "README.rst"
repository = "https://github.com/kannkyo/nvd-api"
version = "0.7.0"

[tool.poetry.dependencies]
certifi = "^2022.12.7"
frozendict = "^2.3.4"
python = "^3.8"
python-dateutil = "^2.8.2"
setuptools = "^67.2.0"
typing-extensions = "^4.4.0"
urllib3 = "^1.26.13"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
cyclonedx-bom = "^3.11.0"
flake8 = "^4.0.1"
flake8-formatter-junit-xml = "^0.0.6"
flake8-html = "^0.4.3"
in-toto = "^1.3.1"
pycodestyle = "^2.7.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"
recommonmark = "^0.7.1"
sphinx = "^6.1.3"
sphinx-markdown-tables = "^0.0.17"
sphinx-rtd-theme = "^1.2.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
pytest-randomly = "^3.12.0"
twine = "^4.0.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
push = "tools.push:main"
release = "tools.release:main"
sbom = "tools.sbom:main"
sphinx = "tools.sphinx:main"

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--junitxml=report.xml",
  "--verbose",
  "--html=report.html",
  "--self-contained-html",
]
testpaths = [
  "tests",
]
